--- a/templates/yourheat/orderforms/boilerform.html
+++ b/templates/yourheat/orderforms/boilerform.html
@@ -98,7 +98,7 @@
                 {% else %}
                     
                     {% if forloop.counter == form.fields|length %}
-                        <div class = "col-6">x</div></div>
+                        <div class = "col-6"></div></div>
                     {% endif %}    
                 {% endif %}    
 
