--- a/templates/yourheat/orderforms/financeform.html
+++ b/templates/yourheat/orderforms/financeform.html
@@ -56,6 +56,7 @@
                     {{ wizard.form.component_price_total.as_hidden }}
                     {{ wizard.form.estimated_duration_cost.as_hidden }}
                     {{ wizard.form.component_duration_total.as_hidden }}
+                    {{ wizard.form.alt_total_cost.as_hidden }}
                 </div>
                 
             </div>    
