--- a/templates/yourheat/pages/quote_generated.html
+++ b/templates/yourheat/pages/quote_generated.html
@@ -19,7 +19,7 @@
 
 <script>
     all_good_no_redirect("Quote Generation",
-        "Your quote has been generated and is available to view and/or email to the customer.")
+        "Your quote is ready to view and/or email to the customer.")
 </script>
 
 {% endblock %}
