--- a/static/css/main.css
+++ b/static/css/main.css
@@ -199,17 +199,17 @@ a:hover {
 }  
 
 .form-rad-group {
-  background-color: rgb(228, 228, 228);
+  /* background-color: rgb(228, 228, 228); */
   visibility: hidden;
 }
 
 .form-rad-valve-group {
-  background-color: rgb(228, 228, 228);
+  /* background-color: rgb(228, 228, 228); */
   visibility: hidden;
 }
 
 .form-towel-group {
-  background-color: rgb(228, 228, 228);
+  /* background-color: rgb(228, 228, 228); */
   visibility: hidden;
 }
 
@@ -219,7 +219,7 @@ a:hover {
 }
 
 .form-extras-group {
-  background-color: rgb(228, 228, 228);
+  /* background-color: rgb(228, 228, 228); */
   visibility: hidden;
 }
 
