--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/home">Dashboard<span class="sr-only">(current)</span></a>
         </li>
+        {% if request.user.username == 'yourheatx' %}
         <span class="nav-item dropdown">
           <a class="nav-link dropdown dropdown-toggle" href="/productcomponentlist/" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
@@ -76,6 +77,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/optionalextralist">Optional Extras<span class="sr-only">(current)</span></a>
         </li>
+        {% endif %}
         {% if request.session.created_quote %}
           {% if request.user|has_group:"WESTCHEM" %}
             <li class="nav-item">
@@ -103,8 +105,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
           <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
-          <a class="dropdown-item" href="/productcomponentlist">Components</a>
           <a class="dropdown-item" href="/changepassword">Change Password</a>
+          <a class="dropdown-item" href="/uploadforreprint_yh">Upload Reprint File</a>
+          <a class="dropdown-item" href="/editcurrentquotedata">Edit Quote Data</a>
           <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
             <div class="dropdown-divider"></div>
