YH Further minor updates following previous release

--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -890,7 +890,7 @@
                         
                             <th width="60%">Product Description</th>
                             <th width="20%">Qty</th>
-                            <th width="20%">Price (Inc VAT)</th>
+                            <th width="20%">Total Price (Inc VAT)</th>
                         
                         {% if form_data.8.extra_1 %}
                             <tr>
