--- a/templates/base.html
+++ b/templates/base.html
@@ -61,15 +61,15 @@
             <a class="dropdown-item" href="/productcomponentlist/?filter=Electrical Pack">Electrical Pack</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Filling Link">Filling Link</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Fitting Pack">Fitting Pack</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Fuel Supply Length">Fuel Supply Length</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Gas Flue Component">Gas Flue Component</a>
-            <a class="dropdown-item" href="/productcomponentlist/?filter=Gas Supply Length">Gas Supply Length</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Oil Flue Component">Oil Flue Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Plume Component">Plume Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Programmer Thermostat">Programmer Thermostat</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Radiator">Radiator</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Scaffolding">Scaffolding</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Scale Reducer">Scale Reducer</a>
-            <a class="dropdown-item" href="/productcomponentlist/?filter=Special Lift">Special Lift</a>
+            <!-- <a class="dropdown-item" href="/productcomponentlist/?filter=Special Lift">Special Lift</a> -->
             <a class="dropdown-item" href="/productcomponentlist/?filter=Thermostatic Radiator Valve">Thermostatic Radiator Valve</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Towel Rail">Towel Rail</a>
           </div>
