--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
             <a class="dropdown-item" href="/productcomponentlist/?filter=Double Handed Lift">Double Handed Lift</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Earth Spike">Earth Spike</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Electrical Pack">Electrical Pack</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Estimated Duration">Estimated Duration</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Filling Link">Filling Link</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Fitting Pack">Fitting Pack</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Fuel Supply Length">Fuel Supply Length</a>
