--- a/templates/yourheat/orderforms/workloadandextrasform.html
+++ b/templates/yourheat/orderforms/workloadandextrasform.html
@@ -23,7 +23,7 @@
     <div class = "row">
         <div class = "col-6">
             <div class="form-group">
-                <label>{{ wizard.form.estimated_duration.label }} *</label>
+                <label>{{ wizard.form.estimated_duration.label }} * <b>({{wizard.form.component_duration_total.value}} hrs )</b></label>
                 {{ wizard.form.estimated_duration }}
             </div>
             <div class="form-check">
